services/foundry-vtt/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foundry-vtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: foundry-vtt
      app.kubernetes.io/name: foundry-vtt
  template:
    spec:
      containers:
        - name: foundryvtt-web
          image: foundryvtt
          # https://hub.docker.com/r/felddy/foundryvtt#environment-variables
          ports:
            - name: web
              containerPort: 30000
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: foundry-vtt-data
