services/foundry-vtt/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foundry-vtt
spec:
  selector:
    app: foundry-vtt
  ports:
    - name: web
      port: 80
      targetPort: web
