services/foundry-vtt/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foundry-vtt
spec:
  parentRefs:
    - name: traefik-intranet
      namespace: traefik
  hostnames:
    - foundry-vtt.int.fivebytestudios.com
  rules:
    - backendRefs:
        - name: foundry-vtt
          port: 80
